changes by Gustavo